--- a/memoria/tex/abstract.tex
+++ b/memoria/tex/abstract.tex
@@ -1,5 +1,5 @@
 
-Probably you had ever seen on the Internet, magazines or even journals any picture with some patterns that repeat over and over again. And pretty surely you had seen or touched such natural structures as trees, ferns or some kind of vegetables, for example a cauliflower, where the whole object seems to be composed of small copies of itself. Fractals, from a mathematical point of view, are objects, shapes or pictures that have repeating and similar patterns. The fractals are, in fact, the focus of this text.
+Probably you had ever seen on the Internet, magazines or even journals any picture with some patterns that repeat over and over again. And pretty surely you had seen or touched such natural structures as trees, ferns or some kind of vegetables, for example a cauliflower, where the whole object seems to be composed of small copies of itself, look at images \ref{fig:objetos}. Fractals, from a mathematical point of view, are objects, shapes or pictures that have repeating and similar patterns. The fractals are, in fact, the focus of this text.
 
 There are lots of types of fractals and ways to generate them. However, many of them are based on the concept of `iteration'. In this project we explain carefully the theory while we show some \textit{Mathematica} codes we had used and the results we got. In case you did not know, \textit{Mathematica} is a widely used mathematical software all over the world. 
 
@@ -11,7 +11,7 @@ Now, we will explain in detail the chapters of this document and their contents.
 
 In this first chapter we give a first insight about what is a fractal. There is not a unique definition of fractal, but in most cases, and specially the one introduced by \textit{Benoit Mandelbrot}, the fractal geometry's father, this term is related to the ideas of self similarity and dimension. 
 
-Firstly, we compare fractals with known objects like trees, romanescu or rays. With this real life examples, we introduce the concept of `self similarity' and present some of the most popular and classic fractals: the Cantor set, the Sierpinski triangle, the Sierpinski Carpet, the Menger Sponge, the Koch curve and the Koch snowflake. We explain how each one is generated and some of their properties, including of course pictures.
+Firstly, we compare fractals with known objects like trees, romanescu or rays. With this real life examples, we introduce the concept of `self similarity' and present some of the most popular and classic fractals: the Cantor set, the Sierpinski triangle, the Sierpinski Carpet, the Menger Sponge, the Koch curve and the Koch snowflake (respectively, images \ref{fig:Cantor}, \ref{fig:triangulo-Sierpinski}, \ref{fig:alfombra-Sierpinski}, \ref{fig:esponja-menger}, \ref{fig:curva-Koch} and \ref{fig:copo-Koch}). We explain how each one is generated and some of their properties, including of course pictures.
 
 All these classic examples help us to understand what the self similarity is, so it is time to learn about dimension. There are several types, but the most common fractals dimensions are the `box-counting dimension' and the `Hausdorff dimension'. We talk about both and about the `topological dimension', and after it we expose some relations between the different definitions given.
 
@@ -21,11 +21,11 @@ The iteration is the basis of many algorithms in many fields of science. Particu
 
 Remember we talked about Mathematica, and now is when we start to use it. It includes support for many fields of mathematics, in particular 2D graphics, complex numbers and iteration of functions, and these will be the most useful tools for us. 
 
-Using the Newton method to find roots of complex functions and evaluating the convergence speed of the method on each $z\in\C$, we can render using Mathematica the first pictures with fractal appearance.
+Using the Newton method to find roots of complex functions and evaluating the convergence speed of the method on each $z\in\C$, we can render using Mathematica the first pictures with fractal appearance, look at images \ref{fig:cuencas-raiz} and \ref{fig:cuencas-velocidad}.
 
 \section*{Chapter 3: Julia and Mandelbrot Sets}
 
-This would not be a fractals projects if we do not talk about Julia and Mandelbrot sets. We present the complex function $P_c(z)=z^2 +c$ for a fixed $c\in\C$ and its importance in this chapter. From this function we explain the algorithms used to visualize the Julia set of a complex number $c$ ($\mathcal{J}_c$) and the Mandelbrot set ($\mathcal{M}$). 
+This would not be a fractals projects if we do not talk about Julia and Mandelbrot sets. We present the complex function $P_c(z)=z^2 +c$ for a fixed $c\in\C$ and its importance in this chapter. From this function we explain the algorithms used to visualize the Julia set of a complex number $c$ ($\mathcal{J}_c$) and the Mandelbrot set ($\mathcal{M}$). Look at images \ref{fig:julia-intro} and \ref{fig:mandelbrot-intro}. 
 
 We also show some self-similar regions they present, and finally we explain and visualize some generalizations of these sets. Everything is accompanied by lots of clarifying images.
 
@@ -47,7 +47,7 @@ Specifically, we will use WebGL, an API that can be managed using JavaScript, so
 
 After initiate us in WebGL, it is time to use it to render 2D fractals. We constantly reference the methods and theorems we defined in the third chapter, because the goal is develop an interactive web page where it is possible to render Julia and Mandelbrot sets modifying some parameters.
 
-In order to simplify the debug process we set up the Object Oriented paradigm and struct the code into JavaScript classes. After it, we use GLSL to translate the Mathematica code we wrote in chapter 3 in order to render the Julia and Mandelbrot set using WebGL.
+In order to simplify the debug process we set up the Object Oriented paradigm and struct the code into JavaScript classes. After it, we use GLSL to translate the Mathematica code we wrote in chapter 3 with the aim of render the Julia and Mandelbrot set using WebGL. Last, but not least, we introduce a edge smoothing technic called `Supersampling Antialiasing', which we'll use in order to care about the realism and images' quality.
 
 \section*{Chapter 7: Introduction to Ray-Tracing}
 
@@ -55,7 +55,7 @@ It is easy to identify a pixel of the screen with an element of the complex plan
 
 In this chapter, we give a deeper definition of this method and its components. The goal now is develop a simple, but complete, ray-tracer. It means, render a scene with easy objects, like spheres and a plane. Now we are going to introduce the roadmap we followed.
 
-First, the creation of the rays, there is not ray-tracing without rays. After that, we assign a color to each pixel asuming the scene is empty. It means, we define which colors will we assign to the pixels whose rays miss. Next, we add some spheres and a plane to the scene, programming the intersection sphere-ray and plane-ray, which fortunately are so easy. Once we have filled the scene with objects, it's time to move the camera. We modify the ray creation code in order to let us change freely the point of view, allowing us to see different perspectives of the same scene. Later, we introduce in detail and implement a lighting model in order to give volume, shine, shadows and realism to the scene, assigning a material to each object, creating light sources and evaluating this lighting model at each intersection point. Specifically, we will use the `Phong lighting model', which is not very complex, but enough for our purpose. Last, but not least, we introduce a edge smoothing technic called `Supersampling Antialiasing', which we'll use in order to care about the realism.
+First, the creation of the rays, there is not ray-tracing without rays. After that, we assign a color to each pixel asuming the scene is empty. It means, we define which colors will we assign to the pixels whose rays miss. Next, we add some spheres and a plane to the scene, programming the intersection sphere-ray and plane-ray, which fortunately are so easy. Once we have filled the scene with objects, it's time to move the camera. We modify the ray creation code in order to let us change freely the point of view, allowing us to see different perspectives of the same scene. Later, we introduce in detail and implement a lighting model in order to give volume, shine, shadows and realism to the scene, assigning a material to each object, creating light sources and evaluating this lighting model at each intersection point. Specifically, we will use the `Phong lighting model', which is not very complex, but enough for our purpose. We also generalize SSAA in order to apply this technic on 3D scenes, achieving much more realism and quality.
 
 \section*{Chapter 8: Rendering 3D fractals}
 
@@ -63,7 +63,7 @@ This is the last chapter, the icing on the cake. Starting from the code we wrote
 
 We can use this concept in ray tracing with the sphere-tracing algorithm. It consist of marching iteratively along the ray until a intersection is found. Starting from the observer's position, at every step we calculate the minimum distance to any object of the scene. Unless this distance is so small (in that case we consider we reached an intersection), we advance that minimun distance along the ray, repeating the calculation until the ray misses or finds an intersection.
 
-With these two new ingredients, we can modify the ray-tracer in order to calculate the intersections using sphere-tracing instead of resolving equations. In the next sections, we calculate SDFs in order to render Julia and Mandelbrot 3D generalizations, which are based on quaternions. We also render the Mandelbulb set, a non rigorous but beautiful generalization of the Mandelbrot set.
+With these two new ingredients, we can modify the ray-tracer in order to calculate the intersections using sphere-tracing instead of resolving equations. In the next sections, we calculate SDFs in order to render Julia and Mandelbrot 3D generalizations (images \ref{fig:julia-3D} and \ref{fig:mandelbrot-3D}), which are based on quaternions. We also render the Mandelbulb set, a non rigorous but beautiful generalization of the Mandelbrot set (\ref{fig:mandelbub}).
 
 \section*{Keywords}
 
