Introducción del término rasterización en la intro (#68)

--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -7,7 +7,9 @@ Fueron estos avances los que sirvieron de inspiración a \textit{Benoit Mandelbr
 
 Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del ordenador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. 
 
-Más tarde aparecerían las primeras gráficas modernas y la informática gráfica. No fue hasta la década de 1980 cuando apareció el concepto de `emisión de rayos' en la computación gráfica. Esta sería la semilla de la costosa, pero productiva técnica de generación de imágenes que conocemos como `Ray-Tracing'. Gracias a ella, la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, con trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
+Más tarde aparecerían las primeras gráficas modernas y la informática gráfica. El método más primitivo de visualizar escenas tridimensionales en pantallas, que son objetos de dos dimensiones, es el conocido como `rasterización'. Este método consiste en considerar cada objeto de la escena y calcular y colorear los píxeles donde se proyecta. 
+
+No fue hasta la década de 1980 cuando apareció el concepto de `emisión de rayos' en la computación gráfica. Esta sería la semilla de la costosa, pero productiva técnica de generación de imágenes que conocemos como `Ray-Tracing', en la cual, al contrario de la rasterización, consideramos cada píxel de la pantalla e identificamos los objetos que se proyectan en dicho pixel. Gracias a esta técnica, la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, con trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
 
 A día de hoy, con la revolución tecnológica en la que nos vemos sumidos en la actualidad, toda la teoría fractal está en explotación, tanto en el ámbito informático como en el puramente matemático.
 
