Añado imágenes con más calidad a capítulo 8 e intento añadir CI (#68)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -2,6 +2,10 @@
 \usepackage{import}
 \usepackage{preamble}
 
+%%%%%
+% pdflatex  -synctex=1 -interaction=nonstopmode -file-line-error -recorder -output-directory="/home/usuario/Documentos/Universidad/TFG/Geometria-Fractal/memoria"  "/home/usuario/Documentos/Universidad/TFG/Geometria-Fractal/memoria/main.tex"
+%%%%%
+
 \begin{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
