--- a/memoria/tex/capitulos/capitulo-8.tex
+++ b/memoria/tex/capitulos/capitulo-8.tex
@@ -717,9 +717,9 @@ En las imágenes \ref{fig:julia-3D} podemos ver algunos de los resultados que, d
 \begin{figure}[ht]
     \centering
     \begin{tabular}{cc}
-      \includegraphics[scale=0.28]{img/C8/julia-1.png} &     \includegraphics[scale=0.36]{img/C8/julia-2.png} \\
+      \includegraphics[width=6.5cm]{img/C8/julia-1.png} &     \includegraphics[width=6.5cm]{img/C8/julia-2.png} \\
     (a) $c=-0.12+0.75 i$ & (b) $c=0.3+1.09j+0.3k$ \\[6pt]
-    \includegraphics[scale=0.21]{img/C8/julia-3.png} &     \includegraphics[scale=0.25]{img/C8/julia-4.png} \\
+    \includegraphics[width=6.5cm]{img/C8/julia-3.png} &     \includegraphics[width=6.5cm]{img/C8/julia-4.png} \\
     (c) $c=0.1+0.74i+0.62j+0.14k$ & (d) $c=-0.81-0.48j-0.1k$ \\[6pt]
     \end{tabular}
     \caption{Conjuntos de Julia 3D para distintos $c\in\H$}
@@ -781,9 +781,9 @@ Tras esta pequeña modificación y darle a \verb|u_fractal| el valor $2$ mediant
 \begin{figure}[ht]
     \centering
     \begin{tabular}{cc}
-        \includegraphics[scale=0.33]{img/C8/mandelbrot-2.png} &
-      \includegraphics[scale=0.33]{img/C8/mandelbrot-1.png} \\    
-    \includegraphics[scale=0.4]{img/C8/mandelbrot-3.png} &     \includegraphics[scale=0.25]{img/C8/mandelbrot-4.png} \\
+        \includegraphics[width=6.5cm]{img/C8/mandelbrot-2.png} &
+      \includegraphics[width=6.5cm]{img/C8/mandelbrot-1.png} \\    
+    \includegraphics[width=6.5cm]{img/C8/mandelbrot-3.png} &     \includegraphics[width=6.5cm]{img/C8/mandelbrot-4.png} \\
     \end{tabular}
     \caption{Detalles del conjunto de Mandelbrot generalizado}
     \label{fig:mandelbrot-3D}
@@ -881,9 +881,9 @@ Con este nuevo código junto con el necesario para calcular las normales y las m
 \begin{figure}[ht]
     \centering
     \begin{tabular}{cc}
-        \includegraphics[scale=0.34]{img/C8/mandelbub-1.png} &
-      \includegraphics[scale=0.33]{img/C8/mandelbub-2.png} \\    
-    \includegraphics[scale=0.35]{img/C8/mandelbub-3.png} &     \includegraphics[scale=0.31]{img/C8/mandelbub-4.png} \\
+        \includegraphics[width=6.5cm]{img/C8/mandelbub-1.png} &
+      \includegraphics[width=6.5cm]{img/C8/mandelbub-2.png} \\    
+    \includegraphics[width=6.5cm]{img/C8/mandelbub-3.png} &     \includegraphics[width=6.5cm]{img/C8/mandelbub-4.png} \\
     \end{tabular}
     \caption{Conjunto de Mandelbub}
     \label{fig:mandelbub}
