Corregidas imágenes que se iban (#68)

--- a/memoria/tex/capitulos/analisis-diseno.tex
+++ b/memoria/tex/capitulos/analisis-diseno.tex
@@ -73,19 +73,24 @@ Ante estos casos de uso, en la figura \ref{fig:casos-uso} vemos el diagrama de c
 A continuación presentaremos los bocetos básicos, a veces llamados `wireframes', de la apariencia que tendrá la web. Son únicamente tres pantallas, y dos de ellas son prácticamente iguales en lo que a nivel de boceto se refiere. La pantalla en la que se visualizan fractales 2D y 3D en un canvas (imagen \ref{fig:wireframe-fractals}) es prácticamente igual en ambos casos, por lo que sólo hemos incluido una de ellas entendiendo que los enlaces y los títulos son intercambiables en cada versión. 
 
 \begin{figure} [ht]
-\centering
-\includegraphics[scale = 0.4]{img/wireframe-home.png}
-\caption{Wireframe de la portada de la página}
-\label{fig:wireframe-home}
-\end{figure}
+    \centering
+    \includegraphics[width=12cm]{img/wireframe-home.png}
+    \caption{Wireframe de la portada de la página}
+    \label{fig:wireframe-home}
+    \end{figure}
 
-Como vemos en la imagen \ref{fig:wireframe-home}, al acceder a la web nos aparecería la posibilidad de elegir si queremos explorar el mundo de los fractales 2D o 3D. Debajo del menú seleccionable aparecería una breve introducción al mundo de los fractales desde un punto de vista entendible por casi cualquier persona.
 
-\begin{figure} [ht]
-\centering
-\includegraphics[scale = 0.4]{img/wireframe-1.png}
-\caption{Wireframe de la pantalla en la que se visualizan fractales}
-    \label{fig:wireframe-fractals}
-\end{figure}
+
+Como vemos en la imagen \ref{fig:wireframe-home}, al acceder a la web nos aparecería la posibilidad de elegir si queremos explorar el mundo de los fractales 2D o 3D. Debajo del menú seleccionable aparecería una breve introducción al mundo de los fractales desde un punto de vista entendible por casi cualquier persona con conocimientos básicos.
+
+
+\newpage
 
 Sobre la pantalla de la imagen \ref{fig:wireframe-fractals}, aparecería a la izquierda el canvas donde se visualizarían los fractales y los distintos controles y parámetros modificables estarían en el lado derecho. Debajo de esta sección de la pantalla también se incluiría un texto documentando el sentido de cada parámetro para que el usuario que no conozca demasiado el trasfondo matemático ni informático pueda interactuar sin problemas.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[width=12cm]{img/wireframe-1.png}
+    \caption{Wireframe de la pantalla en la que se visualizan fractales}
+        \label{fig:wireframe-fractals}
+    \end{figure}
