--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -1,6 +1,8 @@
 \ProvidesPackage{preamble}
 
-\usepackage[a4paper, tmargin=2.54cm, bmargin=2.54cm, lmargin=3.17cm, rmargin=3.17cm]{geometry}
+%\usepackage[a4paper, tmargin=2.54cm, bmargin=2.54cm, lmargin=3.17cm, rmargin=3.17cm]{geometry}
+\usepackage[a4paper, tmargin=2.54cm, bmargin=2cm, lmargin=2.5cm, rmargin=2.5cm]{geometry}
+
 \newcommand{\head}[1]{\textnormal{\textbf{#1}}}
 
 %Options: Sonny, Lenny, Glenn, Conny, Rejne, Bjarne, Bjornstrup
