--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -24,6 +24,25 @@
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% AGRADECIMIENTOS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\chapter*{Agradecimientos}
+
+\import{tex/}{agradecimientos.tex}
+
+\newpage
+
+\vspace*{\fill}
+    \begin{flushright}
+        \textit{La delgada línea \\
+        entre el arte \\
+        y las matemáticas}
+    \end{flushright}
+\vspace*{\fill}
+
+
 %\chapter*{Autoría}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -34,7 +53,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ABSTRACT
+% RESUMEN
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter*{Resumen}
