--- a/memoria/tex/abstract.tex
+++ b/memoria/tex/abstract.tex
@@ -39,31 +39,31 @@ In addition, although you can get images from SFIs, the inverse problem is also 
 
 \section*{Chapter 5: Introduction to the render tools}
 
-At this point, we could render many fractals images using Mathematica. The problem is Mathematica is not a render tool, it executes the pixels sequentially, so the execution is very slow. We will give a little introduction to what we call `rasterization APIs', tools used to render 2D and 3D images. The main advantage of rasterization APIs is they use the computer's graphic card besides the central processor, so they are much faster. Hereby, we need to specify some fragments of code written in a special language, these are called `shaders'. 
+At this point, we could render many fractals images using Mathematica. The problem is that Mathematica is not a render tool, it computes each pixel color sequentially, so the execution is very slow. We will give a little introduction to what we call `rasterization APIs', tools used to render 2D and 3D images. The main advantage of rasterization APIs is they use the computer's Graphics Processing Unit (GPU) besides the central processor, so they are much faster. Hereby, we need to specify some fragments of code written in a special language, these are called `shaders'. 
 
-Specifically, we will use WebGL, an API that can be managed using JavaScript, so we can develop a web application and execute it using a web browser. WebGL needs the shader to be written using the `GL Shading Language' (GLSL). In this chapter we expose the main components of a WebGL based application and code step by step a very simple example.
+Specifically, we will use WebGL, an API which was designed to be used in JavaScript programs, so we can develop a web application and execute it using a web browser. WebGL needs the shader to be written using the `GL Shading Language' (GLSL). In this chapter we expose the main components of a WebGL based application and code step by step a very simple example.
 
 \section*{Chapter 6: Rendering 2D fractals}
 
-After initiate us in WebGL, it is time to use it to render 2D fractals. We constantly reference the methods and theorems we defined in the third chapter, because the goal is develop an interactive web page where it is possible to render Julia and Mandelbrot sets modifying some parameters.
+After initiate us in WebGL, it is time to use it to render 2D fractals. In this chapter, we frequently reference the methods and theorems we defined in the third chapter, because the goal is develop an interactive web page where it is possible to render Julia and Mandelbrot sets modifying some parameters.
 
-In order to simplify the debug process we set up the Object Oriented paradigm and struct the code into JavaScript classes. After it, we use GLSL to translate the Mathematica code we wrote in chapter 3 with the aim of render the Julia and Mandelbrot set using WebGL. Last, but not least, we introduce a edge smoothing technic called `Supersampling Antialiasing', which we'll use in order to care about the realism and images' quality.
+In order to write readable and reusable code, and to easy the debug process, we use the Object Oriented paradigm and structure the code into JavaScript classes. After it, we use GLSL to translate the Mathematica code we wrote in chapter 3 with the aim of render the Julia and Mandelbrot set using WebGL. Last, but not least, we introduce a edge smoothing technic called `Supersampling Antialiasing', which we'll use in order to care about the realism and images' quality.
 
 \section*{Chapter 7: Introduction to Ray-Tracing}
 
-It is easy to identify a pixel of the screen with an element of the complex plane $\C$. This makes the 2D process so easy. However, render a 3D scene and fractals is not that simple. There are different ways of representing a 3D scene in a 2D screen. We will use the `Ray-Tracing' technic, which consists of identifying each pixel with a point of the space, launching a ray for each pixel, identify the possible intersections between the rays and the scene's objects and assign a color to each pixel depending on the intersection or missing.
+It is easy to identify the central point of a pixel in the screen with a point in the complex plane $\C$. This makes the 2D process so easy. However, render a 3D scene with fractals is not that simple. There are different ways of representing a 3D scene in a 2D screen. We will use the `Ray-Tracing' technique, which consists of computing, for each pixel in the image, which object, if any, is projected onto that pixel, and then computing the pixel color accordingly.
 
-In this chapter, we give a deeper definition of this method and its components. The goal now is develop a simple, but complete, ray-tracer. It means, render a scene with easy objects, like spheres and a plane. Now we are going to introduce the roadmap we followed.
+In this chapter, we give a detailed definition of this method and its components. The goal now is develop a simple, but complete, ray-tracer. It means, render a scene with simple objects, like spheres and a plane. Now we are going to introduce the roadmap we followed.
 
-First, the creation of the rays, there is not ray-tracing without rays. After that, we assign a color to each pixel asuming the scene is empty. It means, we define which colors will we assign to the pixels whose rays miss. Next, we add some spheres and a plane to the scene, programming the intersection sphere-ray and plane-ray, which fortunately are so easy. Once we have filled the scene with objects, it's time to move the camera. We modify the ray creation code in order to let us change freely the point of view, allowing us to see different perspectives of the same scene. Later, we introduce in detail and implement a lighting model in order to give volume, shine, shadows and realism to the scene, assigning a material to each object, creating light sources and evaluating this lighting model at each intersection point. Specifically, we will use the `Phong lighting model', which is not very complex, but enough for our purpose. We also generalize SSAA in order to apply this technic on 3D scenes, achieving much more realism and quality.
+First, we describe the creation of the rays, after all there is not ray-tracing without rays. After that, we assign a color to each pixel asuming the scene is empty. It means, we define which colors will we assign to the pixels whose rays miss. Next, we add some spheres and a plane to the scene, programming the intersection sphere-ray and plane-ray, which fortunately are so easy. Once we have filled the scene with objects, it's time to move the camera. We modify the ray creation code in order to let us change freely the point of view, allowing us to see different perspectives of the same scene. Later, we introduce in detail and implement a lighting model in order to give volume, shine, shadows and realism to the scene, assigning a material to each object, creating light sources and evaluating this lighting model at each intersection point. Specifically, we will use the `Phong lighting model', which is not very complex, but enough for our purpose. We also generalize SSAA in order to apply this technic on 3D scenes, achieving much more realism and quality.
 
 \section*{Chapter 8: Rendering 3D fractals}
 
-This is the last chapter, the icing on the cake. Starting from the code we wrote in the previous chapter, we have to modify the existing and include some new code in order to visualize 3D fractals. The first fact: calculate the intersection is not that simple as it is when you render Spheres and Planes. There is not an easy way to solve equation like before. Nevertheless, for each object, we can try to find a signed distance function (SDF). This is a scalar field which calculates for each point of the space a lower bound of the distance to the object's surface. So, you can undertand a surface as the set of points where the SDF is equal to 0.
+This is the last chapter, the icing on the cake. Starting from the code we wrote in the previous chapter, we have to modify it and include some new code in order to visualize 3D fractals. The first fact: calculate the intersection is not that simple as it is when you render Spheres and Planes. There is not an easy way to solve equation like before. Nevertheless, for each object, we can try to find a signed distance function (SDF). This is a scalar field which yields, for each point of the space, a lower bound of the distance to the object's surface. So, you can identify a surface with the set of points where the SDF is equal to 0.
 
-We can use this concept in ray tracing with the sphere-tracing algorithm. It consist of marching iteratively along the ray until a intersection is found. Starting from the observer's position, at every step we calculate the minimum distance to any object of the scene. Unless this distance is so small (in that case we consider we reached an intersection), we advance that minimun distance along the ray, repeating the calculation until the ray misses or finds an intersection.
+We can render scenes with objects defined by their SDFs, by using the so called `sphere-tracing' variant of ray-tracing. It consist of marching iteratively along the ray until a intersection is found. Starting from the observer's position, at every step we calculate the minimum distance to any object of the scene. Unless this distance is so small (in that case we consider we reached an intersection), we advance that minimun distance along the ray, repeating the calculation until the ray misses or an intersection is found.
 
-With these two new ingredients, we can modify the ray-tracer in order to calculate the intersections using sphere-tracing instead of resolving equations. In the next sections, we calculate SDFs in order to render Julia and Mandelbrot 3D generalizations (images \ref{fig:julia-3D} and \ref{fig:mandelbrot-3D}), which are based on quaternions. We also render the Mandelbulb set, a non rigorous but beautiful generalization of the Mandelbrot set (\ref{fig:mandelbub}).
+With these two new ingredients, we can modify the ray-tracer in order to calculate the intersections using sphere-tracing instead of resolving equations. In the following sections, we describe adequate SDFs in order to render Julia and Mandelbrot 3D generalizations (images \ref{fig:julia-3D} and \ref{fig:mandelbrot-3D}), which are based on quaternions. We also render the Mandelbulb set, a non rigorous but beautiful generalization of the Mandelbrot set (\ref{fig:mandelbub}).
 
 \section*{Keywords}
 
