Corregida numeración de páginas (#68)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -73,8 +73,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \tableofcontents
-\setcounter{page}{1}
-\pagenumbering{roman}
 \thispagestyle{plain}
 
 
@@ -110,8 +108,6 @@
 
 \chapter*{Introducción}
 \addcontentsline{toc}{chapter}{Introducción}
-\setcounter{page}{1}
-\pagenumbering{arabic}
 
 
 \import{tex/capitulos/}{introduccion.tex}
@@ -192,7 +188,7 @@
 \appendix
 \cleardoublepage
 % \addtocontents{toc}{\bigskip}
-\addcontentsline{toc}{part}{Appendices}
+\addcontentsline{toc}{part}{Apéndices}
 
 %% OPTIONAL - Max 10-15 pages in total
 
